Thu Feb 24 21:05:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBundle.m: ([-initWithPath:]) added code suggested by
	jagapen@whitewater.chem.wisc.edu to handle relative paths.
	* Source/NSObject.m: Added catagory of 'Object' so that containers
	can safely hold non-NSObject descended objects.

Thu Feb 24 15:55:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/TcpPort.m: Removed some unused code.
	* Source/GSTcpPort.m: Added new port implementation - non-functional
	as yet, but it represents quite a bit of work so I thought I'd put
	it somewhare safe from my hard disk crashing.

Thu Feb 24 08:30:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSUser.m: NSOpenStepRootDirectory() use GNUSTEP_ROOT

Tue Feb 22 15:03:46 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/Foundation/NSPort.h: Fixed typo: changed `@class
	NSArray` to `@class NSMutableArray` to make it compile.

Tue Feb 22 07:31:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Tools/gdomap.c: Reinstated '-p' flag to disable probes and added
	code to do probes by broadcast to the local network rather than by
	probing machines individually if possible.

2000-02-20  Matthias Klose  <doko@cs.tu-berlin.de>

	* Tools/gdomap.c (main): Add -I <file> option to write the pid to.

Mon Feb 21 13:44:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSRunLoop.m: Use sel_eq() for selector comparison so that
	we are guaranteed to match correctly when removing actions from the
	runloop.

Fri Feb  6 14:54:00 2000  Manuel Guesdon <mguesdon@sbuilders.com>

	* Source/NSCalendarDate.m: handle nil and empry string in 
		-initWithString:calendarFormat:locale:
	* ChangeLog: Replace 1999 by 2000 for last modifications :-)

Fri Feb  4 17:20:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSPortNameServer.m: New methods for use by NSConnection
	* Foundation/NSPortNameServer.h: ditto